# sv-transit-py

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: python.yml  tests.yml
lights/: __init__.py  __main__.py
modes/: __init__.py  __main__.py  bart.py  caltrain.py  old.py
scripts/: aliases.zsh  bart3d.py  tdt.py  transit.py
tests/: caltrain.html  test_bart.py  test_caltrain.py  test_caltrain_html.py  test_other.py
