[tool.poetry]
name = "modes"
version = "0.1.2"
description = "CLI for BART and Caltrain, etc."
authors = ["Tor E Hagemann <hagemt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.10.0"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.1.0"
mypy = "^0.942"
pylint = "^2.13.0"
pytest = "^7.1.1"
types-beautifulsoup4 = "^4.10.16"
types-click = "^7.1.8"
types-requests = "^2.27.14"
pytest-cov = "^3.0.0"
pytest-only = "^1.2.2"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
