[tool.poetry]
name = "modes"
version = "0.1.2"
description = "CLI for BART and Caltrain, etc."
authors = ["Tor E Hagemann <hagemt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
beautifulsoup4 = "^4.10.0"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^23.1.0"
mypy = "^1.0.1"
pylint = "^2.16.2"
pytest = "^7.1.1"
types-beautifulsoup4 = "^4.10.16"
types-click = "^7.1.8"
types-requests = "^2.27.14"
pytest-cov = "^4.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "unnecessary-lambda-assignment,use-dict-literal"
