[tool.poetry]
name = "modes"
version = "0.1.2"
description = "CLI for BART and Caltrain, etc."
authors = ["Tor E Hagemann <hagemt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
beautifulsoup4 = "^4.12.2"
click = "^8.1.7"
requests = "^2.31.0"
certifi = "2023.7.22"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.6"
pytest = "^7.4.2"
types-beautifulsoup4 = "^4.12.0.6"
types-click = "^7.1.8"
types-requests = "^2.31.0.6"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "unnecessary-lambda-assignment,use-dict-literal"
